deployments/ranger/es-ranger-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: es-ranger
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: es-ranger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-ranger
spec:
  selector:
    matchLabels:
      app: es-ranger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: es-ranger
    spec:
      containers:
      - name: es-ranger
        image: "docker.elastic.co/elasticsearch/elasticsearch:7.12.1"
        ports:
        - containerPort: 9200
          name: es-ranger
        volumeMounts:
        - name: es-ranger
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: es-ranger
        persistentVolumeClaim:
          claimName: es-pv-claim
