deployments/ranger/postgres-ranger-deplyoment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranger-db
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-ranger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-ranger
spec:
  selector:
    matchLabels:
      app: postgres-ranger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-ranger
    spec:
      containers:
      - name: postgres-ranger
        image: "postgres:13"
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-for-ranger
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "2G"
            cpu: 2
      volumes:
      - name: postgres-for-ranger
        persistentVolumeClaim:
          claimName: postgres-ranger-pv-claim
